<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.smac.Main" >
    <ImageView
        android:id="@+id/imageView1"
<<<<<<< HEAD
        android:layout_width="match_parent"
        android:layout_height="match_parent"
=======
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
>>>>>>> 0e8f92ca2c4cd9284611d02859692fd1a5b203cb
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:scaleType="fitXY"
        android:src="@drawable/main_screen_bckg_final" />
    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="175dp"
        android:background="@android:color/transparent"
    	android:text="@string/setup_alarm"
    	android:textAllCaps="false"
    	android:textColor="#F0FFFF"
    	android:textSize="20sp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/button1"
		android:background="@android:color/transparent"
    	android:text="@string/about"
   		android:textAllCaps="false"
   		android:textColor="#F0FFFF"
    	android:textSize="20sp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button2"
        android:background="@android:color/transparent"
        android:text="@string/exit"
        android:textAllCaps="false"
        android:textColor="#F0FFFF"
        android:textSize="20sp" />

</RelativeLayout>